# omr

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  integrate.yml
app/: main.py
app/routers/: health.py  scan.py
app/utils/: scan.py
server/: main.py
server/routers/: health.py
server/utils/: scan.py
tests/: main.test.py
tests/data/: EPQ-R_Test-1.yml  EPQ_Test-1.yml
