[project]
name = "unpsy-omr"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.4",
  "numpy>=2.1.2",
  "opencv-contrib-python-headless>=4.10.0.84",
  "pillow>=11.0.0",
  "pydantic-settings>=2.6.1",
  "scipy>=1.14.1",
]

[dependency-groups]
dev = ["changelog-gen>=0.13.4", "pytest>=8.3.3"]

[tool.changelog_gen]
current_version = "1.0.0"
